--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   <!-- ======= Home Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 class="mb-4 pb-0">Transform Your Space, Elevate Your Style</h1>
-      <p class="mb-4 pb-0">Discover home decor that blends beauty and functionality effortlessly. From bold statement pieces to subtle accents, our collection is designed to reflect your style and make every corner of your home feel inviting.</p>
-      <a href="forms/Sign Up & Login form/index.html" class="about-btn scrollto">Start Now</a>
+      <h1 class="mb-4 pb-0">Know Your Home’s Worth – Instantly and Accurately!</h1>
+      <p class="mb-4 pb-0">Discover the future of real estate valuation with our AI-driven house price prediction model. Get real-time insights on property values using fuzzy logic, and explore the best market opportunities.</p>
+      <a href="forms/Sign Up & Login form/index.html" class="about-btn scrollto">Get Started</a>
     </div>
   </section>
   <!-- End Home Section -->
@@ -71,7 +71,7 @@
           <img src="assets/css, js, images/P1.jpg" alt="AI generated resume">
         </div>
         <div class="service-content">
-          <h2>Curated Home Decor Collection</h2>
+          <h2>AI Chatbot Assistance</h2>
           <p>
             Explore a wide range of premium decor items, from elegant furniture to stylish accents. Our curated collection includes everything you need to bring your vision to life: modern sofas, artistic wall art, luxurious rugs, and more. Each piece is thoughtfully selected to ensure it combines functionality with timeless design, helping you create a home that reflects your unique personality.
           </p>
@@ -83,33 +83,9 @@
           <img src="assets/css, js, images/P2.jpg" alt="Mock Test"/>
         </div>
         <div class="service-content">
-          <h2>Interior Design Consultation</h2>
+          <h2>House Price Prediction Model</h2>
           <p>
-            Get personalized advice from our experienced interior design experts. Whether you’re redesigning a single room or your entire home, we provide tailored solutions to match your style and budget. Through virtual or in-home consultations, our designers work with you to create layouts, choose color schemes, and select the perfect decor to transform your space into a sanctuary.
-          </p>
-        </div>
-      </div>
-
-      <div class="feedback-item">
-        <div class="feedback-image">
-          <img src="assets/css, js, images/P3.jpg" alt="Mock Test"/>
-        </div>
-        <div class="service-content">
-          <h2>Custom-Made Decor Solutions</h2>
-          <p>
-            Bring your ideas to life with our bespoke decor services. We specialize in crafting furniture and decor items tailored to your specific needs, whether it’s a custom-sized dining table, a unique lighting fixture, or personalized textiles. Choose from a variety of materials, finishes, and designs to ensure every piece perfectly complements your home’s aesthetic.
-          </p>
-        </div>
-      </div>
-
-      <div class="feedback-item">
-        <div class="feedback-image">
-          <img src="assets/css, js, images/P4.jpg" alt="Search for job">
-        </div>
-        <div class="service-content">
-          <h2>Room Makeover Packages</h2>
-          <p>
-            Revitalize your space with our comprehensive room makeover services. Whether it’s a cozy living room, a serene bedroom, or a functional home office, we offer complete solutions to transform any room. Our team handles everything from furniture selection and decor arrangement to creating cohesive themes that align with your style. Enjoy a hassle-free process that turns your vision into reality, leaving you with a beautifully designed space you'll love.
+           Want to know your property's worth? Our fuzzy logic-based AI model analyzes key property details—location, size, features, and market trends—to provide accurate and data-driven price estimates. Compare multiple properties and make smarter, more confident decisions in real estate!
           </p>
         </div>
       </div>
@@ -130,12 +106,15 @@
           <p class="subheading">Get to know us</p>
           <h3>HomeDecor</h3>
           <p>
-            Welcome to HomeDecor, your ultimate destination for home decor that inspires and transforms. We believe that your home is more than just a place - it's a reflection of your personality, a sanctuary of comfort, and a canvas for creativity. That's why we're passionate about providing thoughtfully curated decor, expert design services, and personalized solutions to help you create a space that feels uniquely yours.
+            We are dedicated to simplifying the real estate journey with technology. Our AI-powered platform helps buyers, sellers, and investors make informed decisions with accurate house price predictions and expert chatbot assistance.
           </p>
           <p>
-            With a commitment to quality, style, and functionality, we offer everything from timeless furniture to trend-setting accents, ensuring every piece blends beauty with practicality. Whether you're redecorating a single room or crafting your dream home, our team of design enthusiasts is here to guide you every step of the way.
+            Why Choose Us?
           </p>
-          <p>At HomeDecor, we don't just sell decor; we create experiences that turn houses into homes. Join us on this journey to design spaces that inspire happiness and harmony.</p>
+          <p>AI-Powered Insights – Data-driven property price predictions.<br>
+             Instant Valuations – Quick and efficient results.<br>
+             Smart Chatbot – Get real estate guidance 24/7.
+          </p>
         </div>
       </div>
       
@@ -148,24 +127,24 @@
     <h2>Frequently Asked Questions</h2>
     <div class="faq-container">
       <div class="faq-item">
-        <h3>What styles of home decor do you offer?</h3>
-        <p>We offer a wide variety of home decor styles including modern, contemporary, rustic, bohemian, industrial, vintage, and more. Browse our collections to find the perfect style for your home.</p>
+        <h3>How does the house price prediction model work?</h3>
+        <p>Our system uses fuzzy logic to analyze property details and provide an estimated price based on real market trends.</p>
       </div>
       <div class="faq-item">
-        <h3>How do I choose the right decor for my space?</h3>
-        <p>Start by considering your existing furniture and color scheme. Think about the mood you want to create and choose pieces that complement your space, keeping in mind the size and layout of the room.</p>
+        <h3>Can I use the chatbot for real estate investment advice?</h3>
+        <p>Yes! Our chatbot provides valuable insights on market conditions, investment strategies, and home-buying tips.</p>
       </div>
       <div class="faq-item">
-        <h3>Do you offer custom-made furniture or decor?</h3>
-        <p>Yes, we offer custom furniture and decor options! Contact us with your specific needs or preferences, and our design team will help create something unique for your home.</p>
+        <h3>Is the house price prediction tool free?</h3>
+        <p> Yes, our basic prediction tool is free. For advanced insights, premium features are available.</p>
       </div>
       <div class="faq-item">
-        <h3>Can I return or exchange items?</h3>
-        <p>Yes, we offer a return and exchange policy within [X] days of purchase. Please visit our Returns & Exchanges page for more details on how to initiate a return.</p>
+        <h3>How accurate is the house price prediction model?</h3>
+        <p>Our model uses fuzzy logic and real market data to provide highly accurate estimates. However, prices may vary based on market conditions and additional property factors.</p>
       </div>
       <div class="faq-item">
-        <h3>How do I care for my furniture and decor items?</h3>
-        <p>Care instructions vary depending on the material and type of item. Please refer to the product page for specific care instructions or visit our Care & Maintenance section for general tips.</p>
+        <h3>Can I compare multiple property valuations?</h3>
+        <p>Yes! Our tool allows you to compare different properties by inputting multiple sets of details, helping you make a well-informed decision.</p>
       </div>
     </div>
   </section>
@@ -199,10 +178,10 @@
   <!-- Footer Bottom -->
   <div class="container text-center py-3">
       <div class="copyright">
-          &copy; <strong>HomeDecor</strong>. All Rights Reserved
+         © House Price Predictor. All Rights Reserved.
       </div>
       <div class="credits">
-          Designed by <a href="index.html">HomeDecor</a>
+          Designed by <a href="index.html">House Price Predictor</a>
       </div>
   </div>
 </footer>
