--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="service-content">
           <h2>About Us</h2>
           <p class="subheading">Get to know us</p>
-          <h3>HomeDecor</h3>
+          <h3>House Price Prediction</h3>
           <p>
             We are dedicated to simplifying the real estate journey with technology. Our AI-powered platform helps buyers, sellers, and investors make informed decisions with accurate house price predictions and expert chatbot assistance.
           </p>
