--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/css, js, images/Decor.png" rel="icon">
-  <link href="assets/css, js, images/Decor.png" rel="apple-touch-icon">
+  <link href="assets/css, js, images/decorr.png" rel="icon">
+  <link href="assets/css, js, images/decorr.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -33,7 +33,7 @@
     <div class="container-fluid container-xxl d-flex align-items-center">
       <div id="logo" class="me-auto">
         <a href="index.html" class="scrollto">
-          <img src="assets/css, js, images/logo.png" style="max-height: 100px;">
+          <img src="assets/css, js, images/logoo.png" style="max-height: 100px;">
         </a>
       </div>
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -157,7 +157,7 @@
           <div class="row align-items-center">
               <!-- Footer Logo and Info -->
               <div class="col-lg-6 col-md-6 footer-info">
-                  <img src="assets/css, js, images/logo.png" alt="Interview Prep Logo" style="height: 100px; margin-bottom: 10px;">
+                  <img src="assets/css, js, images/logoo.png" alt="Interview Prep Logo" style="height: 100px; margin-bottom: 10px;">
                   <p>Inspiring Your Home Journey with Beautiful, Thoughtful Design.</p>
               </div>
 
