--- a/forms/house_price_prediction/index.html
+++ b/forms/house_price_prediction/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicons -->
-	<link href="Decor.png" rel="icon" sizes="180x180">
-	<link href="Decor.png" rel="apple-touch-icon">
+	<link href="decorr.png" rel="icon" sizes="180x180">
+	<link href="decorr.png" rel="apple-touch-icon">
 	<!-- Boxicons -->
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
@@ -20,7 +20,7 @@
 	<!-- SIDEBAR -->
 	<section id="sidebar">
 		<a href="#" class="brand">
-			<img src="logo.png" alt="hire ai" style="height: 60px; width: 60px;">
+			<img src="logoo.png" alt="hire ai" style="height: 60px; width: 60px;">
 		</a>
 		<ul class="side-menu top">
 			<li>
