--- a/forms/chatbot/index.html
+++ b/forms/chatbot/index.html
@@ -72,7 +72,7 @@
     <!-- MAIN CONTENT -->
     <div class="iframe-container">
         <iframe
-            src="https://krish30-house-ai.hf.space"
+            src="https://krish-upgrix-house-ai.hf.space"
             frameborder="0"
             class="fullscreen-iframe"
         ></iframe>
